[gd_scene load_steps=19 format=3 uid="uid://dd2lchxcdgs6m"]

[ext_resource type="Script" uid="uid://disolp4bnher6" path="res://scripts/characters/boss.gd" id="1_imw47"]
[ext_resource type="PackedScene" uid="uid://dnbcx272f5ff4" path="res://addons/octopus_tentacle/scene.gltf" id="2_edpq3"]
[ext_resource type="Material" uid="uid://8o284etsqdf7" path="res://materials/shaders/health_bar.tres" id="3_r8uym"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_edpq3"]
height = 5.0
radius = 2.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_r8uym"]
height = 4.0
radius = 1.5

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p2gyk"]
height = 3.0
radius = 1.25

[sub_resource type="CylinderShape3D" id="CylinderShape3D_hxcvo"]
height = 5.0
radius = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_j30ar"]
height = 2.5

[sub_resource type="Animation" id="Animation_r8uym"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerListener:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerListener:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sketchfab_Scene:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 9.53674e-07)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sketchfab_Scene:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("KnockBackArea:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("KnockBackArea:rotation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_p2gyk"]
resource_name = "attack"
length = 4.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1, 4),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [],
"method": &"_attack_callibrate"
}, {
"args": [],
"method": &"_attack_touch_ground"
}, {
"args": [],
"method": &"_attack_end"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerListener:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.1, 1.19, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 1.99, 3.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 10, 0), Vector3(0, 6.16131, 6.7768), Vector3(0, 0.746733, 9.19211), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(0, 0.747, 9.192), Vector3(0, 10, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerListener:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.01, 1.99, 3.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.907152, 0, 0), Vector3(1.65806, 0, 0), Vector3(1.65806, 0, 0), Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sketchfab_Scene:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.1, 1.19, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 1.99, 3.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 10, 0), Vector3(0, 6.16131, 6.7768), Vector3(0, 0.746733, 9.19211), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(0, 0.747, 9.192), Vector3(0, 10, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sketchfab_Scene:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1.01, 1.99, 3.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.907152, 0, 0), Vector3(1.65806, 0, 0), Vector3(1.65806, 0, 0), Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("KnockBackArea:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.1, 1.19, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 1.99, 3.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 10, 0), Vector3(0, 6.16131, 6.7768), Vector3(0, 0.746733, 9.19211), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(-0.1, 0.747, 9.192), Vector3(0.1, 0.747, 9.192), Vector3(0, 0.747, 9.192), Vector3(0, 10, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("KnockBackArea:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.5, 1.01, 1.99, 3.99),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.907152, 0, 0), Vector3(1.65806, 0, 0), Vector3(1.65806, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_edpq3"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sketchfab_Scene:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.00999999, 1.01, 1.97667, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 10, 0), Vector3(0, 10, 0), Vector3(0, 10, 0), Vector3(0, 10, 0), Vector3(0, 10, 0), Vector3(0, 10, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sketchfab_Scene:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 1.96667, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.282743), Vector3(0, 0, 0), Vector3(0, 0, 0.298451), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PlayerListener:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.00999999, 1.01, 1.97667, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 10, 0), Vector3(0, 10, 0), Vector3(0, 10, 0), Vector3(0, 10, 0), Vector3(0, 10, 0), Vector3(0, 10, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PlayerListener:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 1.96667, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.282743), Vector3(0, 0, 0), Vector3(0, 0, 0.298451), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hxcvo"]
_data = {
&"RESET": SubResource("Animation_r8uym"),
&"attack": SubResource("Animation_p2gyk"),
&"idle": SubResource("Animation_edpq3")
}

[sub_resource type="CylinderShape3D" id="CylinderShape3D_qryem"]
height = 20.0
radius = 3.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_u6mvt"]

[sub_resource type="SphereMesh" id="SphereMesh_edpq3"]
material = SubResource("StandardMaterial3D_u6mvt")
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c44uy"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_r8uym"]
material = SubResource("StandardMaterial3D_c44uy")
radius = 0.01
height = 0.02

[sub_resource type="QuadMesh" id="QuadMesh_p2gyk"]
material = ExtResource("3_r8uym")
size = Vector2(10, 0.7)

[node name="Boss" type="CharacterBody3D"]
collision_layer = 0
script = ExtResource("1_imw47")
metadata/_custom_type_script = "uid://cicq1c5bduuou"

[node name="Sketchfab_Scene" parent="." instance=ExtResource("2_edpq3")]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 9.53674e-07)

[node name="PlayerListener" type="Area3D" parent="."]
collision_layer = 5
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="PlayerListener"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7, 0)
shape = SubResource("CylinderShape3D_edpq3")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="PlayerListener"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.5, 0)
shape = SubResource("CylinderShape3D_r8uym")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="PlayerListener"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CylinderShape3D_p2gyk")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="PlayerListener"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)
shape = SubResource("CylinderShape3D_hxcvo")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="PlayerListener"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.75, 0)
shape = SubResource("CylinderShape3D_j30ar")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_hxcvo")
}

[node name="KnockBackArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="KnockBackArea"]
shape = SubResource("CylinderShape3D_qryem")

[node name="Eye" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.171618, 18.571, 0.441664)
visible = false
mesh = SubResource("SphereMesh_edpq3")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Eye"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.102719)
mesh = SubResource("SphereMesh_r8uym")

[node name="Eye2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.153504, 18.571, 0.441664)
visible = false
mesh = SubResource("SphereMesh_edpq3")
skeleton = NodePath("")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Eye2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.102719)
mesh = SubResource("SphereMesh_r8uym")

[node name="HealthBar" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0)
mesh = SubResource("QuadMesh_p2gyk")

[connection signal="area_entered" from="PlayerListener" to="." method="_on_player_listener_area_entered"]
[connection signal="area_entered" from="KnockBackArea" to="." method="_on_knock_back_area_area_entered"]
[connection signal="area_exited" from="KnockBackArea" to="." method="_on_knock_back_area_area_exited"]

[editable path="Sketchfab_Scene"]
